[package]
name = "nu_plugin_gitql"
version = "0.1.0"
authors = ["Darren Schroeder <343840+fdncred@users.noreply.github.com>"]
edition = "2021"
description = "a nushell plugin called gitql"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.99.1"
nu-protocol = "0.99.1"
nu-path = "0.99.1"

chrono = "0.4.38"
csv = "1.3.0"
gitql-ast = "0.26.0"
gitql-cli = "0.29.0"
gitql-core = "0.6.0"
gitql-engine = "0.29.0"
gitql-parser = "0.28.0"
gitql-std = "0.6.0"
gix = "0.67.0"
serde_json = "1.0.132"

# for local development, you can use a path dependency
# nu-plugin = { version = "0.99.0", path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"], version = "0.99.0" }
# nu-path =  { version = "0.99.0", path = "../nushell/crates/nu-path" }

[dev-dependencies]
nu-plugin-test-support = { version = "0.99.1" }
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"

[profile.dev]
opt-level = 0

# To use a development version of a dependency please use a global override here
# changing versions in each sub-crate of the workspace is tedious
[patch.crates-io]
# gitql-ast = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-cli = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-core = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-engine = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-parser = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-std = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
